set01/problem07_compile_errors.txt
Compilation started at 12/1/2023, 3:57:03 PM
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c: In function 'main':
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c:11:14: error: 'a' undeclared (first use in this function)
     output(n,a,sum);
              ^
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c:11:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 12/1/2023, 3:57:03 PM
